started preparing content for dissertation

--- a/doc/dissertation/chapter1.tex
+++ b/doc/dissertation/chapter1.tex
@@ -1,3 +1,5 @@
-\chapter{\uppercase{Introduction}}
+\chapter{INTRODUCTION}
 
-\input{content/introduction}
+\section{Purpose}
+  \input{content/introduction/purpose}
+\section{Previous Work}
