--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -104,7 +104,8 @@ $\limitedfluxboundsi$ & upper and lower bounds for limited flux sum for degree
                         of freedom $i$\\
 $\ssres$           & steady-state residual vector\\
 $\entropyresidual_\cellindex$ & entropy residual for cell $\cellindex$\\
-$\support$         & support of FEM test/basis function\\
+$\support_i$       & support of FEM test/basis function $i$\\
+$\support\ij$      & dual support of FEM test/basis functions $i$ and $j$\\
 $\conssource$      & conservation law source function\\
 $\timevalue$       & time\\
 
@@ -129,7 +130,7 @@ $\velocity$        & velocity\\
 $\volume$          & volume\\
 $\cellvolume$      & volume of cell $\cellindex$\\
 $\DMPboundsi$      & upper and lower DMP bounds for degree of freedom $i$\\
-$\spaceposition$   & spatial position\\
+$\x$               & spatial position\\
 %==============================================================================
 % Greek alphabet
 %==============================================================================
