--- a/doc/dissertation/titlepage.tex
+++ b/doc/dissertation/titlepage.tex
@@ -1,23 +1,7 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%  New template code for TAMU Theses and Dissertations starting Fall 2012.  
-%  For more info about this template or the 
-%  TAMU LaTeX User's Group, see http://www.howdy.me/.
-%
-%  Author: Wendy Lynn Turner 
-%	 Version 1.0 
-%  Last updated 8/5/2012
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%% TITLE PAGE
-%% The values get updated automatically.  Please do not make changes to this file other than adding/deleting committee members where necessary.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \providecommand{\tabularnewline}{\\}
 
-
+\pagestyle{empty}
+\pagenumbering{roman}
 
 \begin{titlepage}
 \begin{center}
