--- a/doc/dissertation/content/discretization/spatial_discretization.tex
+++ b/doc/dissertation/content/discretization/spatial_discretization.tex
@@ -18,7 +18,7 @@ $\testfunction_i(\x)$ gives
 \end{equation}
 where $\support_i$ is the support of $\testfunction_i(\x)$. If the flux function
 $\consfluxscalar$ is linear, then the system to be solved is linear:
-\begin{equation}\label{semidiscrete}
+\begin{equation}\label{eq:semidiscrete}
   \consistentmassmatrix\ddt{\solutionvector}+\ssmatrix\solutionvector(t)
   = \ssrhs(\timevalue) \eqc
 \end{equation}
