--- a/doc/dissertation/content/low_order/theta_DMP.tex
+++ b/doc/dissertation/content/low_order/theta_DMP.tex
@@ -45,7 +45,7 @@ and rearranging,
     +\frac{\Delta t}{m_i}\left((1-\theta)b_i^n + \theta b_i^{n+1}\right)\right].
 \]
 By Lemma \ref{offdiagonalnegative}, it is known that the off-diagonal
-elements $A^L_{i,j}, j\ne i$, are non-positive, and by Equation \ref{theta_CFL}
+elements $A^L_{i,j}, j\ne i$, are non-positive, and by Equation \eqref{theta_CFL}
 the term $1 - \frac{(1-\theta)\Delta t}{m_i}A_{i,i}^L$ is non-negative.
 Thus, the following inequality is able to be applied:
 \[
