wrote entropy viscosity for shallow water notes

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -39,6 +39,8 @@
 \section{High-Order Schemes}  
 %===============================================================================
   \subsection{Entropy Viscosity}
+    \subsubsection{Entropy Viscosity for Scalar Conservation Law Equations}
+      \input{content/high_order/EV_scalar}
     \subsubsection{Entropy Viscosity for the Shallow Water Equations}
       \input{content/high_order/EV_shallowwater}
 %===============================================================================
