--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -13,9 +13,11 @@
 \usepackage{tamuconfig}
 \usepackage{rotating}   % to allow rotation of floats
 \usepackage{color}
+\usepackage{xcolor}
 \usepackage{alltt}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{empheq} % for emphasizing certain equations
 \usepackage[hidelinks]{hyperref}
 
 % input user-defined commands
