--- a/doc/dissertation/nomenclature.tex
+++ b/doc/dissertation/nomenclature.tex
@@ -6,6 +6,7 @@ and Table \ref{tab:symbols} lists the symbols used in this dissertation.
 
 \begin{mytable}{Abbreviations Used in Dissertation}{abbreviations}{l l}
 {\emph{Abbreviation} & \emph{Description}}
+CG  & continuous Galerkin\\
 DMP & discrete maximum principle\\
 EV  & entropy viscosity\\
 FCT & flux-corrected transport\\
@@ -149,9 +150,9 @@ $\theta$           & parameter for $\theta$ time discretization scheme\\
 
 % nu - omega
 %------------------------------------------------------------------------------
-$\lowordervisc$    & low-order viscosity for cell $\cellindex$\\
-$\highordervisc$   & high-order viscosity for cell $\cellindex$\\
-$\entropyvisc$     & entropy viscosity for cell $\cellindex$\\
+$\lowordercellviscosity$  & low-order viscosity for cell $\cellindex$\\
+$\highordercellviscosity$ & high-order viscosity for cell $\cellindex$\\
+$\entropycellviscosity$   & entropy viscosity for cell $\cellindex$\\
 $\density$         & density\\
 $\reactioncoef$    & reaction coefficient\\
 $\totalcrosssection$ & total macroscopic cross-section\\
