added lake at rest problem and wrote problem descriptions

--- a/doc/dissertation/references.bib
+++ b/doc/dissertation/references.bib
@@ -1,3 +1,52 @@
+@article{fjordholm2011,
+ author = {Fjordholm, Ulrik S. and Mishra, Siddhartha and Tadmor, Eitan},
+ title = {Well-balanced and Energy Stable Schemes for the Shallow Water Equations with Discontinuous Topography},
+ journal = {J. Comput. Phys.},
+ issue_date = {June, 2011},
+ volume = {230},
+ number = {14},
+ month = jun,
+ year = {2011},
+ issn = {0021-9991},
+ pages = {5587--5609},
+ numpages = {23},
+ url = {http://dx.doi.org/10.1016/j.jcp.2011.03.042},
+ doi = {10.1016/j.jcp.2011.03.042},
+ acmid = {1982737},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Eddy viscosity, Energy preserving schemes, Energy stable schemes, Numerical diffusion, Shallow water equations},
+}
+
+@incollection{chen2013,
+  year={2013},
+  isbn={978-3-642-33220-3},
+  booktitle={Recent Developments in the Numerics of Nonlinear Hyperbolic Conservation Laws},
+  volume={120},
+  series={Notes on Numerical Fluid Mechanics and Multidisciplinary Design},
+  editor={Ansorge, Rainer and Bijl, Hester and Meister, Andreas and Sonar, Thomas},
+  doi={10.1007/978-3-642-33221-0_8},
+  title={An Adaptive Artificial Viscosity Method for the Saint-Venant System},
+  url={http://dx.doi.org/10.1007/978-3-642-33221-0_8},
+  publisher={Springer Berlin Heidelberg},
+  author={Chen, Yunlong and Kurganov, Alexander and Lei, Minlan and Liu, Yu},
+  pages={125-141},
+  language={English}
+}
+
+@article{vukovic2002,
+  title = "{ENO} and {WENO} Schemes with the Exact Conservation Property for One-Dimensional Shallow Water Equations",
+  journal = "Journal of Computational Physics ",
+  volume = "179",
+  number = "2",
+  pages = "593 - 621",
+  year = "2002",
+  note = "",
+  issn = "0021-9991",
+  doi = "http://dx.doi.org/10.1006/jcph.2002.7076",
+  url = "http://www.sciencedirect.com/science/article/pii/S0021999102970762",
+  author = "Senka Vukovic and Luka Sopta"
+}
 
 @article{guermond_ev,
   author = "Jean-Luc Guermond and Richard Pasquetti and Bojan Popov",
